--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   go_router:
   shared_preferences:
   jwt_decoder:
+  integration_test:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
